--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Jobs.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Jobs.cshtml
@@ -4,11 +4,10 @@
 
 <span id="GetJobsUrl" style="display:none">@Url.Action("Get", "Jobs")</span>
 <span id="PostJobsUrl" style="display:none">@Url.Action("Post", "Jobs")</span>
+<span id="PutJobsUrl" style="display:none">@Url.Action("Put", "Jobs")</span>
 <div class="row">
     <div class="col-sm-12">
-        @*<span id="GetMapUrl" style="display:none">@Url.Action("GetMap", "Home")</span>
-            <span id="GetUnitsUrl" style="display:none">@Url.Action("GetUnits", "Home")</span>
-            <img id="TestBgImage" src="~/images/WoHTestBackground.png" style="display:none; position:absolute" />*@
+        <br />
         <div id="JobsPannel">
         </div>
     </div>
@@ -18,10 +17,11 @@
 @section Scripts{
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src=@Url.Content("~/js/Job.jsx")></script>
-    <script src=@Url.Content("~/js/JobComplexityInput.jsx")></script>
-    <script src=@Url.Content("~/js/JobNameInput.jsx")></script>
-    <script src=@Url.Content("~/js/JobDescriptionInput.jsx")></script>
-    <script src=@Url.Content("~/js/CreateJob.jsx")></script>
-    <script src=@Url.Content("~/js/JobsPannel.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/Job.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/JobComplexityInput.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/JobNameInput.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/JobDescriptionInput.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/CreateJobForm.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/UpdateJobForm.jsx")></script>
+    <script src=@Url.Content("~/js/Jobs/JobsPannel.jsx")></script>
 }
