--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Shared/_AccountLayout.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Shared/_AccountLayout.cshtml
@@ -17,30 +17,11 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Androids">Androids</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Jobs">Jobs</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - AndroidManager</p>
+            <p>&copy; 2018 - AndroidManager.Shell.Web</p>
         </footer>
     </div>
 
