Android editing added

--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
@@ -6,6 +6,7 @@
 <span id="PostAndroidsUrl" style="display:none">@Url.Action("Post", "Androids")</span>
 <span id="PutAndroidsUrl" style="display:none">@Url.Action("Put", "Androids")</span>
 <span id="DeleteAndroidsUrl" style="display:none">@Url.Action("Delete", "Androids")</span>
+<span id="GetJobsUrl" style="display:none">@Url.Action("Get", "Jobs")</span>
 <div class="row">
     <div class="col-sm-12">
         <br />
@@ -21,6 +22,7 @@
     <script src=@Url.Content("~/js/Androids/Android.jsx")></script>
     <script src=@Url.Content("~/js/Androids/CreateAndroidButton.jsx")></script>
     <script src=@Url.Content("~/js/Androids/AndroidNameInput.jsx")></script>
+    <script src=@Url.Content("~/js/Androids/AndroidJobInput.jsx")></script>
     <script src=@Url.Content("~/js/Androids/CreateAndroidForm.jsx")></script>
     <script src=@Url.Content("~/js/Androids/UpdateAndroidForm.jsx")></script>
     <script src=@Url.Content("~/js/Androids/AndroidsPanelBody.jsx")></script>
