add skills panel

--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
@@ -7,6 +7,7 @@
 <span id="PutAndroidsUrl" style="display:none">@Url.Action("Put", "Androids")</span>
 <span id="DeleteAndroidsUrl" style="display:none">@Url.Action("Delete", "Androids")</span>
 <span id="GetJobsUrl" style="display:none">@Url.Action("Get", "Jobs")</span>
+<span id="GetSkillsUrl" style="display:none">@Url.Action("Skills", "Androids")</span>
 <div class="row">
     <div class="col-sm-12">
         <br />
@@ -21,6 +22,8 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src=@Url.Content("~/js/Androids/Android.jsx")></script>
     <script src=@Url.Content("~/js/Androids/CreateAndroidButton.jsx")></script>
+    <script src=@Url.Content("~/js/Androids/SkillNameInput.jsx")></script>
+    <script src=@Url.Content("~/js/Androids/AddSkillPanel.jsx")></script>
     <script src=@Url.Content("~/js/Androids/AndroidNameInput.jsx")></script>
     <script src=@Url.Content("~/js/Androids/AndroidJobInput.jsx")></script>
     <script src=@Url.Content("~/js/Androids/CreateAndroidForm.jsx")></script>
