--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/wwwroot/css/site.css
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/wwwroot/css/site.css
@@ -84,3 +84,56 @@
     width: 267px;
     height: 76px;
 }
+
+.android-frame {
+    display: inline-block;
+    vertical-align: top;
+    margin: 5px;
+    border-radius: 20px;
+    border: 2px solid #337ab7;
+    padding: 10px;
+    width: 267px;
+    height: 118px;
+}
+
+.android-btn-create {
+    display: inline-block;
+    vertical-align: top;
+    margin: 5px;
+    border-radius: 20px;
+    border: 2px solid #337ab7;
+    width: 267px;
+    height: 118px;
+}
+
+.should-reclaimed {
+    border: 2px solid #808080;
+}
+
+.skill-btn-add {
+    float: right;
+    margin: 0px;
+    padding: 6px 8px;
+    border-radius: 8px;
+    width:40px;
+}
+
+.skill-panel {
+    display: inline-block;
+    vertical-align: top;
+    margin: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #337ab7;
+}
+
+.skill-frame {
+    display: inline-block;
+    vertical-align: top;
+    margin: 2px;
+    border-radius: 10px;
+    border: 1px solid #337ab7;
+    padding: 4px;
+    width: 100%;
+    height: 118px;
+}
