Androids pannel added

--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
@@ -20,6 +20,7 @@
 @section Scripts{
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src=@Url.Content("~/js/Androids/Skill.jsx")></script>
     <script src=@Url.Content("~/js/Androids/Android.jsx")></script>
     <script src=@Url.Content("~/js/Androids/CreateAndroidButton.jsx")></script>
     <script src=@Url.Content("~/js/Androids/SkillNameInput.jsx")></script>
