--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/wwwroot/css/site.css
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/wwwroot/css/site.css
@@ -130,10 +130,10 @@
 .skill-frame {
     display: inline-block;
     vertical-align: top;
-    margin: 2px;
+    margin: 1px;
     border-radius: 10px;
     border: 1px solid #337ab7;
-    padding: 4px;
+    padding: 4px 8px;
     width: 100%;
-    height: 118px;
+    height: 32px;
 }
