--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Account/Register.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Account/Register.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </form>
                 <br />
-                <span>Already registered? </span><a href=@Url.Action("Login","Account")></a>
+                <span>Already registered? </span><a href=@Url.Action("Login","Account")>Sign in!</a>
             </div>
         </div>
     </div>
