--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Shared/_Layout.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Shared/_Layout.cshtml
@@ -29,9 +29,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Androids">Androids</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Jobs">Jobs</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a asp-area="" asp-controller="Account" asp-action="SignOut">Sign out</a></li>
                 </ul>
             </div>
         </div>
