--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Account/Register.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Account/Register.cshtml
@@ -14,17 +14,17 @@
                 <form asp-action="Register" asp-controller="Account" method="post">
                     <div class="form-group">
                         <label>Email</label>
-                        <label asp-validation-for="Email" class="text-danger"></label>
+                        <span asp-validation-for="Email" class="text-danger"></span>
                         <input type="text" asp-for="Email" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <label asp-validation-for="Password" class="text-danger"></label>
+                        <span asp-validation-for="Password" class="text-danger"></span>
                         <input type="password" asp-for="Password" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Confirm password</label>
-                        <label asp-validation-for="ConfirmPassword" class="text-danger"></label>
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         <input type="password" asp-for="ConfirmPassword" class="form-control" />
                     </div>
                     <div class="form-group">
@@ -38,3 +38,6 @@
     </div>
 </div>
 
+@section Scripts{
+    <script src=@Url.Content("~/js/PasswordValidate.js")></script>
+}
