--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Jobs.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Jobs.cshtml
@@ -19,6 +19,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src=@Url.Content("~/js/ErrorMsg.jsx")></script>
     <script src=@Url.Content("~/js/Jobs/Job.jsx")></script>
     <script src=@Url.Content("~/js/Jobs/CreateJobButton.jsx")></script>
     <script src=@Url.Content("~/js/Jobs/JobComplexityInput.jsx")></script>
