Avatar image added

--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/Views/Home/Androids.cshtml
@@ -8,7 +8,7 @@
 <span id="DeleteAndroidsUrl" style="display:none">@Url.Action("Delete", "Androids")</span>
 <span id="GetJobsUrl" style="display:none">@Url.Action("Get", "Jobs")</span>
 <span id="GetSkillsUrl" style="display:none">@Url.Action("Skills", "Androids")</span>
-<span id="AddImageUrl" style="display:none">@Url.Action("AddImage", "Androids")</span>
+<span id="AddImageUrl" style="display:none">@Url.Action("Upload", "Androids")</span>
 <div class="row">
     <div class="col-sm-12">
         <br />
