--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/wwwroot/css/site.css
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/wwwroot/css/site.css
@@ -86,6 +86,7 @@
 }
 
 .android-frame {
+    position : relative;
     display: inline-block;
     vertical-align: top;
     margin: 5px;
@@ -147,4 +148,14 @@
     0% {opacity: 1;}
     50% {opacity: 0.1;}
     100% {opacity: 0;}
+}
+
+.avatar {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border: 2px solid #337ab7;
+    border-radius: 2px;
+    right: 36px;
+    bottom: 12px;
 }
